# quant-trading-system

./: .env.example  .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: dev.yaml  live.yaml  paper.yaml  paper_promotion.yaml  trading_calendar_us_2026-04-20_2026-04-24.json  universe.yaml
docs/: operations_backup_restore.md  phase6_local_runbook.md
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 20250918_0001_core_market_data.py  20250918_0001_phase1_core_market_data.py  20260422_0002_corporate_actions.py  20260422_0002_phase1_corporate_actions.py  20260423_0003_operational_strategy_portfolio_risk.py  20260423_0004_operational_oms_account_incidents.py
src/quant_core/: __init__.py
tests/fixtures/: canonical_daily_bars.json
tests/integration/: test_burnin_report_service.py  test_core_migration.py  test_corporate_actions_migration.py  test_daily_bar_import_cli.py  test_daily_bar_ingestion.py  test_daily_bar_validation.py  test_daily_data_quality_report.py  test_local_bootstrap_cli.py  test_local_operator_sequence.py  test_momentum_strategy_persistence.py  test_oms_persistence.py  test_operational_alerts_and_dashboard.py  test_operational_migration.py  test_operational_repositories.py  test_operational_state_and_reconciliation.py  test_operator_review_service.py  test_paper_account_bootstrap_cli.py  test_paper_run_cli_from_database.py  test_paper_run_orchestration.py  test_persisted_research_loader.py  test_phase1_migration.py  test_pretrade_risk_persistence.py  test_universe_loader.py  (+4 more)
(+120 files in other folders)
